Version 2.5.41dev:

* New boolean option jit_compiler (to enable/disable JIT compilation).
* New option jit_memory (=direct/indirect).
* JIT compiler defaults to direct memory access on all platforms now.
* JIT direct memory exception handler for OS X (32-bit).

Version 2.5.40dev:

* Use SetUnhandledExceptionFilter on Windows for JIT direct memory.
* Unified (segfault) exception handler for Windows and Linux.
* Fixed mman for compatibility with JIT direct memory access.
* Re-enable uae_comp_trust* = indirectKS options.
* Allow uae_rtc to be set without disabling uae_chipset_compatible.
* Fixed flickering caused by undefined behavior in shift operations.
* Added new option log_bsdsocket (boolean).

Version 2.5.39dev:

* Updated config for Logitech F310 and added Thrustmaster Dual Action 4.
* Updated AROS kickstart replacement to ver. 2015-05-20 from WinUAE 3.1.0.
* Config files must end with .fs-uae or .conf to be loaded by FS-UAE.
* If you give fs-uae a command line argument with path to a .adf, it will
  be used as value for floppy_drive_0.
* Imported updated translations from crowdin.com.

Version 2.5.38dev:

* Several new and updated joystick and gamepad configs.
* Built-in configs for Xbox 360 / One pads on OS X (requires driver).
* Changed default stereo separation setting to 70%.
* Windows builds are digitally signed again.
* Imported updated translations from crowdin.com.

Version 2.5.37dev:

* Fixed a joystick issue where SDL_JoystickID was not used properly.
* Added new option log_input (replaces environment variable FS_DEBUG_INPUT).
* Also log joystick button and hat events when log_input is enabled.
* Imported updated translations from crowdin.com.

Version 2.5.36dev:

* Fixed a crash (floating point exception) if audio device cannot be opened.

Version 2.5.35dev:

* Fixed bug (lockup) when quitting FS-UAE from Amiga side on some platforms.
* Fixed a potential key repeat issue (could not reproduce original problem).