@@ -33,6 +33,7 @@ dpad_down = down
 south_button = 1
 west_button = 2
 left_trigger = toggle_autofire
+right_trigger = autofire
 
 lstick_left = left
 lstick_right = right
