@@ -29,6 +29,7 @@ static fs_emu_input_mapping g_joystick_mappings[][FS_UAE_MAX_PORT_ACTIONS] = {
         { "rewind", INPUTEVENT_JOY1_CD32_RWD },
         { "forward", INPUTEVENT_JOY1_CD32_FFW },
         { "play", INPUTEVENT_JOY1_CD32_PLAY },
+        { "autofire", INPUTEVENT_JOY1_AUTOFIRE_BUTTON },
         { "toggle_autofire", INPUTEVENT_AMIGA_JOYPORT_0_AUTOFIRE },
         { NULL, 0 },
     },
@@ -48,6 +49,7 @@ static fs_emu_input_mapping g_joystick_mappings[][FS_UAE_MAX_PORT_ACTIONS] = {
         { "rewind", INPUTEVENT_JOY2_CD32_RWD },
         { "forward", INPUTEVENT_JOY2_CD32_FFW },
         { "play", INPUTEVENT_JOY2_CD32_PLAY },
+        { "autofire", INPUTEVENT_JOY2_AUTOFIRE_BUTTON },
         { "toggle_autofire", INPUTEVENT_AMIGA_JOYPORT_1_AUTOFIRE },
         { NULL, 0 },
     },
@@ -59,6 +61,7 @@ static fs_emu_input_mapping g_joystick_mappings[][FS_UAE_MAX_PORT_ACTIONS] = {
         { "down", INPUTEVENT_PAR_JOY1_DOWN },
         { "1", INPUTEVENT_PAR_JOY1_FIRE_BUTTON },
         { "2", INPUTEVENT_PAR_JOY1_2ND_BUTTON },
+        { "autofire", INPUTEVENT_PAR_JOY1_AUTOFIRE_BUTTON },
         { "toggle_autofire", INPUTEVENT_AMIGA_JOYPORT_2_AUTOFIRE },
         { NULL, 0 },
         { NULL, 0 },
@@ -78,6 +81,7 @@ static fs_emu_input_mapping g_joystick_mappings[][FS_UAE_MAX_PORT_ACTIONS] = {
         { "down", INPUTEVENT_PAR_JOY2_DOWN },
         { "1", INPUTEVENT_PAR_JOY2_FIRE_BUTTON },
         { "2", INPUTEVENT_PAR_JOY2_2ND_BUTTON },
+        { "autofire", INPUTEVENT_PAR_JOY2_AUTOFIRE_BUTTON },
         { "toggle_autofire", INPUTEVENT_AMIGA_JOYPORT_3_AUTOFIRE },
         { NULL, 0 },
         { NULL, 0 },
