@@ -405,6 +405,13 @@ DEFEVENT(SPC_CDTV_FRONT_PANEL_FF,_T("CDTV Front Panel Fast Forward"),AM_K,0,0,AK
 
 #ifdef FSUAE
 
+DEFEVENT(AUTOFIRE_BEGIN, _T(""), AM_K, 0, 0, 0)
+DEFEVENT(JOY1_AUTOFIRE_BUTTON,_T("Joy1 Fire/Mouse1 Left Button (Autofire)"),AM_K,4,1,JOYBUTTON_1)
+DEFEVENT(JOY2_AUTOFIRE_BUTTON,_T("Joy2 Fire/Mouse2 Left Button (Autofire)"),AM_K,4,2,JOYBUTTON_1)
+DEFEVENT(PAR_JOY1_AUTOFIRE_BUTTON,_T("Parallel Joy1 Fire Button (Autofire)"),AM_K,4,3,JOYBUTTON_1)
+DEFEVENT(PAR_JOY2_AUTOFIRE_BUTTON,_T("Parallel Joy2 Fire Button (Autofire)"),AM_K,4,4,JOYBUTTON_1)
+DEFEVENT(AUTOFIRE_END, _T(""), AM_K, 0, 0, 0)
+
 DEFEVENT(SPC_STATESAVE1,_T("Quick save state slot 1"),AM_K,0,0,AKS_STATESAVEQUICK1)
 DEFEVENT(SPC_STATESAVE2,_T("Quick save state slot 2"),AM_K,0,0,AKS_STATESAVEQUICK2)
 DEFEVENT(SPC_STATESAVE3,_T("Quick save state slot 3"),AM_K,0,0,AKS_STATESAVEQUICK3)
